# pomelo

./: .gitignore  COPYING  README.md  TechnicalDescription.md  building.md  cross_mingw64.txt  dov-mm-macros.h  example-resource.xml  hello-world-main.cc  hello-world.cc  hello-world.h  hello-world.nsi  main-input.cc  main-input.h  mesh-viewer.cc  mesh-viewer.h  mesh.cc  mesh.h  meson.build  pangocairo-to-contour.cc  pomelo-main.cc  pomelo.cc  pomelo.h  pomelo.nsi  progress-dialog.h  resources.xml  worker-skeleton.cc  worker-skeleton.h
src/: Winding_number.h  bezier-intersect.cc  bezier-intersect.h  cairo-flatten-by-bitmap.cc  cairo-flatten-by-bitmap.h  dov-mm-macros.h  fragment-edge-matcap.glsl  fragment-edge.glsl  fragment-matcap.glsl  fragment.glsl  giv-debug-utils.cc  giv-debug-utils.h  image-tracer-bw.cc  image-tracer-bw.h  main-input.cc  main-input.h  mesh-utils-save.cc  mesh-utils.cc  mesh-utils.h  mesh-viewer.cc  mesh-viewer.h  mesh.cc  mesh.h  meson.build  pango-to-cairo.cc  pango-to-cairo.h  pangocairo-to-contour.cc  pangocairo-to-contour.h  path-extractor.cc  path-extractor.h  polygon_repairing.h  pomelo-cli.cc  pomelo-main.cc  pomelo-settings.cc  pomelo-settings.h  pomelo-widget-utils.cc  pomelo-widget-utils.h  pomelo.cc  pomelo.h  pomelo.rc  (+32 more)
src/giv-widget/: GivPainter.h  GivPainterAgg.cc  GivPainterAgg.h  GivPainterCairo.cc  GivPainterCairo.h  GivPainterCairoPixbuf.cc  GivPainterCairoPixbuf.h  GivRenderer.cc  GivRenderer.h  GivStringArray.c  GivStringArray.h  WordBoundaries.cc  WordBoundaries.h  agg_conv_clipper.h  colormaps.cc  colormaps.h  giv-data.cc  giv-data.h  giv-markup.cc  giv-markup.h  giv-parser.cc  giv-parser.h  giv-settings-editor.cc  giv-settings-editor.h  giv-settings.cc  giv-settings.h  giv-widget.gob  giv_agg_arrowhead.cc  giv_agg_arrowhead.h  meson.build
src/giv-widget/agg/: agg_allocator.h  agg_array.h  agg_basics.h  agg_bezier_arc.cpp  agg_bezier_arc.h  agg_color_gray.h  agg_color_rgba.h  agg_ellipse.h  agg_image_accessors.h  agg_image_filters.h  agg_line_aa_basics.h  agg_line_profile_aa.cpp  agg_path_storage.h  agg_pixfmt_gray.h  agg_pixfmt_rgba.h  agg_rasterizer_cells_aa.h  agg_rasterizer_sl_clip.h  agg_renderer_outline_aa.h  agg_rounded_rect.cpp  agg_span_gradient.h  agg_svg_gradient.cpp  agg_svg_gradient.h  agg_svg_parser.cpp  agg_svg_parser.h  agg_svg_path_renderer.cpp  agg_svg_path_renderer.h  agg_svg_path_tokenizer.cpp  agg_svg_path_tokenizer.h  agg_trans_affine.h  meson.build
src/giv-widget/gtk-image-viewer/: gtk-image-viewer.gob  meson.build  patch_src.py
src/giv-widget/plis/: meson.build  plis.cc  plis.h  plis_regexp.h
subprojects/: gob2.wrap  nanosvg.wrap  spdlog.wrap  tinygltf.wrap
subprojects/packagefiles/spdlog/: 0001.patch
